GNOME Bugzilla – Bug 772434
batch rename: possible major memory leak
Last modified: 2016-10-11 18:22:01 UTC
Batch rename seems to have major memory leak that doesn't free the memory used. How to reproduce: 1. Create several files: touch {0000..9999} 2. Select All -> Rename -> Find and Replace Text 3. replace '0' with '1' Result: The memory usage of nautilus rises, which isn't freed even after closing the batch rename dialog. Note: This happens only when the Replacement Text creates a conflict. As this could potentially freeze the system, marking the bug as critical. Thanks - Mohammed Sadiq
Can you run valgrind to find the leak?
Created attachment 336967 [details] Valgrind log (run with 100 files) (In reply to Carlos Soriano from comment #1) > Can you run valgrind to find the leak? Sure. Valgrind log attached.
Created attachment 337140 [details] [review] batch-rename: Fix memory leaks Fix memory leaks for batch renaming.
Review of attachment 337140 [details] [review]: Thanks Alex for these improvements! ::: src/nautilus-batch-rename-utilities.c @@ +965,3 @@ } + selection_metadata = g_list_reverse (selection_metadata); This is not a leak, so worth having in a different patch, but lets leave it here for now. Just keep it in mind to create new patch when is an unrelated change for the future :)
Pushed since I'm planning to do a release soon Attachment 337140 [details] pushed as 045d04a - batch-rename: Fix memory leaks
*** Bug 771490 has been marked as a duplicate of this bug. ***