batch-rename: Fix memory leaks

Fix memory leaks for batch renaming.

https://bugzilla.gnome.org/show_bug.cgi?id=772434